# arduinolib1

./: .cmake_init.cmake  CMakeLists.txt  CMakeLists.txt.init  arduinolib1.py  library.json  pre_build.py  test_build_serializer.py  test_validation_discovery.py  verify_validation.py
arduinolib1_scripts/: arduinolib1_execute_scripts.py  arduinolib1_pre_build.py
arduinolib1_scripts/arduinolib1_core/: arduinolib1_get_client_files.py
arduinolib1_scripts/arduinolib1_serializer/: 00_process_serializable_classes.py  S1_check_dto_macro.py  S2_extract_dto_fields.py  S3_inject_serialization.py  S4_check_notnull_macro.py  S5_check_notblank_macro.py  S6_discover_validation_macros.py  S7_extract_validation_fields.py
cmake/: arduinolib1Config.cmake.in  arduinolib1_pre_build.cmake
scripts/: get_client_files.py  pre_build.py
serializationlib_scripts/: serializationlib_execute_scripts.py
serializationlib_scripts/serializationlib_serializer/: 00_process_serializable_classes.py  S3_inject_serialization.py  S4_check_notnull_macro.py  S5_check_notblank_macro.py  S7_extract_validation_fields.py  S8_handle_enum_serialization.py
src/: DtoValidationUtility.h  NayanMath.h  NayanSerializer.h  SerializationUtility.h  StandardDefines.h  ValidationIncludes.h
